--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "المدينة القديمة",
-    "short_name": "المدينة القديمة",
+    "name": "alkhan",
+    "short_name": "alkhan",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
